# feedback-theme-engine

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.agents/skills/data-safety-and-secrets/: SKILL.md
.agents/skills/portfolio-documentation/: SKILL.md
.agents/skills/python-project-quality/: SKILL.md
.agents/skills/statistical-signal-layer/: SKILL.md
docs/: ARCHITECTURE.md  DATA_POLICY.md  INTERVIEW_DEFENSE.md  LINKEDIN_PROJECT.md  PORTFOLIO_POSITIONING.md  PORTFOLIO_SUMMARY.md  PROJECT_SPEC.md  ROADMAP.md
examples/: README.md  synthetic_theme_insights.md  synthetic_theme_signals.csv
scripts/: analyze_theme_signals.py  discover_themes.py  embed_reviews.py  label_theme_insights.py  prepare_reviews.py
src/: data_prep.py  embed.py
src/feedback_theme_engine/: __init__.py  cluster_diagnostics.py  data_ingestion.py  data_schema.py  data_validation.py  effect_sizes.py  embeddings.py  insight_reporting.py  llm_labeling.py  sampling.py  statistical_signals.py  text_cleaning.py  theme_discovery.py  theme_representation.py
tests/: test_analyze_theme_signals_cli.py  test_cluster_diagnostics.py  test_data_ingestion.py  test_data_schema.py  test_data_validation.py  test_discover_themes_cli.py  test_effect_sizes.py  test_embed_reviews_cli.py  test_embeddings.py  test_insight_reporting.py  test_label_theme_insights_cli.py  test_llm_labeling.py  test_prepare_reviews_cli.py  test_sampling.py  test_statistical_signals.py  test_text_cleaning.py  test_theme_discovery.py  test_theme_representation.py
