[project]
name = "feedback-theme-engine"
version = "0.1.0"
description = "Portfolio-grade customer feedback theme discovery framework."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Leon Lai" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

